2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* *.py: make flumotion pep-8 clean, try two
	- whitespace only changes were accidentially not
	  included
	- installed.py/uninstalled.py that were generated
	  are now updated
	- cortado_location.py is pep8 clean now aswell.

2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* *.py: make flumotion pep-8 clean

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* common/Makefile.am:
	* conf/Makefile.am:
	* misc/validate-config.py (deleted):
	* common/validate-config.py (added):
	  Move to common since we want to use it in other projects.
	  Change to setup package path so we can use it in other projects.
	* common/common.mk:
	  Remove check-local target since it can't be overridden properly.

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/registry.py:
	  Write out the registry with _description tags.
	* flumotion/test/test_registry.py:
	  Update tests for new _description attribute.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* *.py:
	Replace ",)" with ", )", according to PEP-8,
	removes a couple of 100 warnings spotted by
	pep8.py

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* data/glade/httpstreamer-wizard.glade:
	The mount point entry on the streamer page should be wider.
	Fixes #1102.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/producers/videotest/wizard.glade:
	* flumotion/component/producers/videotest/wizard_gtk.py:
	* flumotion/test/test_wizard_save.py:
	Remove YUV/RGB combo from video test src page in the wizard
	Fixes #1091.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* data/glade/sectionwizard.glade:
	* flumotion/ui/wizard.py:
	Add a finish button, and always show and make it
	sensitive iff it wizard can be finished.

2008-07-31  Johan Dahlin  <johan@flumotion.com>

	* data/Makefile.am:
	* data/image/Makefile.am:
	* flumotion/admin/gtk/dialogs.py:
	* flumotion/ui/icons.py: