@@ -66,6 +66,8 @@ COVERAGE_MODULES = flumotion
 integration:
 	trial tests.integration
 
+check-local: check-local-pep8:
+
 # generated by make check during make distcheck and translation stuff
 DISTCLEANFILES = \
 	cache/registry/registry.xml \
