@@ -12,6 +12,9 @@ check-local-registry:
 check-local-config:
 	for f in $(CONFIG); do $(top_builddir)/env bash -c "export PYTHONPATH=$(FLUMOTION_DIR):$(top_srcdir)${PYTHONPATH:+:$PYTHONPATH} && $(PYTHON) $(top_srcdir)/common/validate-config.py $(srcdir)/$$f"; done
 
+check-local-pep8:
+	find $(top_builddir) -name \*.py|xargs $(PYTHON) $(top_srcdir)/misc/pep8.py
+
 coverage:
 	@trial --temp-directory=_trial_coverage --coverage flumotion.test
 	make show-coverage
